fixed wrap issue with review tile body

--- a/client/src/styles/Reviews/reviewTile.css
+++ b/client/src/styles/Reviews/reviewTile.css
@@ -29,6 +29,9 @@
   display: flex;
   flex-direction: column;
   gap: .5rem;
+  flex-basis: 100%;
+  max-width: 100%;
+  overflow-wrap: break-word;
 }
 
 .review-tile-body {
